@@ -71,9 +71,24 @@ and keep running on your cluster.
 
 =head2 LoadBalancers => ArrayRef[L<Paws::ECS::LoadBalancer>]
 
-A list of load balancer objects, containing the load balancer name, the
-container name (as it appears in a container definition), and the
-container port to access from the load balancer.
+A load balancer object representing the load balancer to use with your
+service. Currently, you are limited to one load balancer per service.
+After you create a service, the load balancer name, container name, and
+container port specified in the service definition are immutable.
+
+For Elastic Load Balancing Classic load balancers, this object must
+contain the load balancer name, the container name (as it appears in a
+container definition), and the container port to access from the load
+balancer. When a task from this service is placed on a container
+instance, the container instance is registered with the load balancer
+specified here.
+
+For Elastic Load Balancing Application load balancers, this object must
+contain the load balancer target group ARN, the container name (as it
+appears in a container definition), and the container port to access
+from the load balancer. When a task from this service is placed on a
+container instance, the container instance and port combination is
+registered as a target in the target group specified here.
 
 
 
